# ChangeLog for dev-perl/IP-Country
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IP-Country/ChangeLog,v 1.46 2014/06/12 11:21:58 zlogene Exp $

  12 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> IP-Country-2.280.0.ebuild:
  Bump to EAPI=5

*IP-Country-2.280.0 (25 Aug 2013)

  25 Aug 2013; Patrick Lauer <patrick@gentoo.org> +IP-Country-2.280.0.ebuild:
  Bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> IP-Country-2.23.ebuild,
  IP-Country-2.270.0.ebuild:
  Drop ia64/sparc keywords

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -IP-Country-2.27.ebuild:
  Cleanup

*IP-Country-2.270.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +IP-Country-2.270.0.ebuild:
  Change version scheme

  10 Jan 2010; Fabian Groffen <grobian@gentoo.org> IP-Country-2.27.ebuild:
  Transfer Prefix keywords

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -IP-Country-2.26.ebuild:
  Cleanup

*IP-Country-2.27 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
  +IP-Country-2.27.ebuild:
  Version bump via perl-bump experimental tool.

  03 Jun 2009; Torsten Veller <tove@gentoo.org> -IP-Country-2.25.ebuild:
  Cleanup

*IP-Country-2.26 (13 Jan 2009)

  13 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  +IP-Country-2.26.ebuild:
  Version bump via perl-bump experimental tool.

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -IP-Country-2.20.ebuild,
  -IP-Country-2.21.ebuild, -IP-Country-2.22.ebuild:
  Cleanup

*IP-Country-2.25 (30 Sep 2008)

  30 Sep 2008; Robin H. Johnson <robbat2@gentoo.org>
  +IP-Country-2.25.ebuild:
  Version bump.

  17 May 2008; nixnut <nixnut@gentoo.org> IP-Country-2.23.ebuild:
  Stable on ppc wrt bug 222443

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> IP-Country-2.23.ebuild:
  Stable for HPPA too.

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> IP-Country-2.23.ebuild: