@@ -6,15 +6,15 @@ DIST IP-Country-2.27.tar.gz 207632 SHA256 39ed6d3890d655159e950f785f5e124b580eba
 DIST IP-Country-2.28.tar.gz 296585 SHA256 88db833a5ab22ed06cb53d6f205725e3b5371b254596053738885e91fa105f75 SHA512 3596014eaeb7d0be8edd9b98c2f31e83587cc48c738837eaa78e9dc6c7ee6cee371a7bc230f28fa2901b9eece7fe0fa2126135a3d90d1261488d61cedcec25ac WHIRLPOOL adb5c5bf18ae3f2534b900437919d7c261a0b0946c33138d72119ebf5710e1669aed473a5ee044780e27ea03cc119c459e2a65365f66baa5acfd7e5b45c93e53
 EBUILD IP-Country-2.23.ebuild 584 SHA256 1aa77660f910092fa01c959f912bd43322a14a9780474f040de9904a449dcb99 SHA512 2b91d5a97de671acb47edff7c67fc92ed1cfea179449a57e9de829a6109b6cecbb9daa5abd2849d1bfdc1466328922232033c48e20d081b6ec489b4a3d116afa WHIRLPOOL 580db543d0fb4af17cb51ed1ef0a8180afe300b9416ebffd8e37d5859862d84d0c53a0ba911369dfd59049f502e7f688cd047074639e2fe79f2ddeaff2185ac0
 EBUILD IP-Country-2.270.0.ebuild 584 SHA256 8ee85d3662a11099d279de732b1d485f875ab1199ade953666962393f85a9771 SHA512 56c895deb07cc475dca6ebb1212599bca3f9564407af348f42625ee418043c41fb1f53c62c28ba18975f2fcaf305a12e66eefa1142895e3be9bfad66f041ca8d WHIRLPOOL e5573edb41f259c493795769aff2d1f849d84fe7e3f0d7bd2abcc558f68b9a020354e20ecd6657b9f9b9c54fe048214da7d3b327071f826ba18b206e610ca6f9
-EBUILD IP-Country-2.280.0.ebuild 584 SHA256 cc4ed88291dea703ac422a204906c8687bb77417802ec5627da9080e1235bead SHA512 05e6c0e371a4f12b6e9e0db550adcdd6bdef0cb9681f0b526011275473ab3bd6c8f15985038ba34c6409b527835ffa856403f1bbf3637e3f5bf2de791864c980 WHIRLPOOL 48f7d4a08ca88216d7d7739389c6e87747f42c16d85d5fd0dafda94034ac928438814e7c11fdacf36520e224706172a89f114b1d9379f8aa725cb12237cac2c4
-MISC ChangeLog 5670 SHA256 915d578aac33da63efc0e750e55191a8ae31399c12bfa81861360cdb5e0fcc5c SHA512 e661e7eb634d446e3ea420665e31acd07f9c58d6cc7431bc4156759a5bf9bad8f8e549a912e795485619ea83e01a572c173816a862ef7b15dbed502abfff6da5 WHIRLPOOL fdc483c504722943f28890b03fcc30089e349f3339740866baa9ae3ec0fd28acdafb7a8f428a115c43f1ebe2cadf6c4c2c301e1a70701274642497a39599ce6b
+EBUILD IP-Country-2.280.0.ebuild 580 SHA256 d9845eeacba318a9dccab06e532ea32163017fe0ca2ff3bfc65af1898c08eec3 SHA512 96733e893e17239ce91965c24f7bb58c3590b575151ab031f4063410618800fe62f413407d4f32eee7a4b7cd45707b22cf50fe39cf96b69f532ef425d3e01fca WHIRLPOOL 43cd624ecab733e8eb4dce3a23ee1e763ff78ba9c9ec5fe5e09acb2ef85a7e4f28ef8401c8e480489fdab78ff3d1418ea2cc229b9420f9db6d19fe26f807f926
+MISC ChangeLog 5793 SHA256 5f155b2f90d858047e00fa13b170dcca98b97a2d9b1390b1635104f69bdab5c2 SHA512 f0aa66bb1c89d27613f1ddebcef84c0c727a019ccc562dbffdf0153ef12f5c6c1e2bb79b832f847d91832f68431aeb21c4001c617f5a308ecb37e2fa18575ee3 WHIRLPOOL b8dce4190ce2461472ea6414f616a191db4bbd6b29a72d294c7e2cbea7f82f1b72ec3d481cead5d678a052627f1ea15955bfe34a179a9f9f6b969ae34859d9ca
 MISC metadata.xml 615 SHA256 43f0ae305c9c925131282ac547d46e6ab5ad62b3c2d9a398e243b01365619aff SHA512 ed5efc6b7d93b15b3f80199ed375d0f4c136d70c6db6d314a5358092e34a15e51b392a9c9a5c8520dc0912bd5fe31c6003ca05c4a4b75c4ad0f1779ee643bce8 WHIRLPOOL f71fc5b2812112d8a27031641feab47aa13273922483653a947642e7e26e4ce5c46c1001a2b83f8c10332f1ae80baa7f30de5968809d2c298a5bd1505591b4cd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iJwEAQEIAAYFAlOZjpwACgkQG9wOWsQutdb1+wP/T9ttRY2XvkoQfd1E48PavcXN
-RUQu3n121ygvvo8lsGZDKzSPvrWEY//6bcXz1esmI7ULgUWWKQS6VAeN7CS7inEo
-sC4UShlbEauwVxy50FaSEj4spjRI5CWWA9eqnEWAr87oOxcpACcSKQoeXCAkluHT
-1eaLM/OBvqampiVkMLY=
-=36vq
+iJwEAQEIAAYFAlOZ5G8ACgkQG9wOWsQutdZpwQP/YngLPKygxBZHB1liMAy75i+J
+6DA3eD7voq9msuTTIl134ae3urmifZ3EI9BIrPCdF/g0CXlX+Y9RH+s4bg5qjPfb
+GJROiMbDh/meA/cIxDnOyJxRfCSTA3QkdDAsV9EwksWJGr8hEkdNYZ6h0+RkaCva
+ACzXfM029JbYae6roEI=
+=9pUB
 -----END PGP SIGNATURE-----
