@@ -3,10 +3,10 @@ DEPEND=dev-perl/Geography-Countries dev-lang/perl:=[-build(-)]
 DESCRIPTION=fast lookup of country codes from IP addresses
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/IP-Country/
-KEYWORDS=~amd64 ~hppa ~ppc ~ppc64 ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
+KEYWORDS=amd64 ~hppa ppc ppc64 x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
 LICENSE=Artistic
 RDEPEND=dev-perl/Geography-Countries dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/N/NW/NWETTERS/IP-Country-2.28.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	4495f6885ab72b2cc94467e9a89fa641
-_md5_=26a9b04cb85d1022c54493a8fa5d4c8c
+_md5_=7714ee1f1e852035a61164e0c74d157c
