@@ -4,10 +4,10 @@ DESCRIPTION=Cryptographic library for embedded systems
 EAPI=5
 HOMEPAGE=http://polarssl.org/
 IUSE=examples havege sse2 static-libs zlib abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32
-KEYWORDS=amd64 arm hppa ~mips ppc ppc64 ~s390 ~sparc x86 ~amd64-fbsd ~x86-fbsd
+KEYWORDS=amd64 arm hppa ~mips ppc ppc64 ~s390 sparc x86 ~amd64-fbsd ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=examples? ( dev-libs/openssl:0 amd64? ( abi_x86_32? ( !<=app-emulation/emul-linux-x86-baselibs-20131008-r6 !app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] || ( dev-libs/openssl:0[abi_x86_32] app-emulation/emul-linux-x86-baselibs ) ) ) ) zlib? ( sys-libs/zlib[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] )
 SLOT=0
 SRC_URI=http://polarssl.org/download/polarssl-1.3.4-gpl.tgz
 _eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	fac675dcccf94392371a6abee62d909f	multilib-build	02e68fc95064bb486c12ad2de16b8c82	multilib-minimal	5bbdc77877c1aa3c6bd89ca3f9196d11	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=7c8e41e21c4ef214cf32bdc69fb712ae
+_md5_=5c92c3dc01daa9db6c923d7498735370
