@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/polarssl
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/polarssl/ChangeLog,v 1.76 2014/05/26 11:32:55 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/polarssl/ChangeLog,v 1.77 2014/06/12 17:05:03 zlogene Exp $
+
+  12 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> polarssl-1.3.4.ebuild:
+  sparc stable wrt bug #506918
 
   26 May 2014; Anthony G. Basile <blueness@gentoo.org> polarssl-1.3.4.ebuild:
   Stable for ppc and ppc64, bug #506918
