@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/IP-Country
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IP-Country/ChangeLog,v 1.46 2014/06/12 11:21:58 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IP-Country/ChangeLog,v 1.47 2014/06/12 17:28:09 zlogene Exp $
+
+  12 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> IP-Country-2.280.0.ebuild:
+  amd64/ppc64/ppc/x86 stable wrt bug #513040
 
   12 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> IP-Country-2.280.0.ebuild:
   Bump to EAPI=5
